--- a/evidence.plugins.yaml
+++ b/evidence.plugins.yaml
@@ -2,6 +2,7 @@ components:
   # This loads all of evidence's core charts and UI components
   # You probably don't want to edit this dependency unless you know what you are doing
   @evidence-dev/core-components: {}
+  @evidence-dev/usql-datatable: {}
 
   # Loading a plugin:
   # your-component-plugin: {}
@@ -25,3 +26,13 @@ components:
   #     - SomeOtherComponent
   #
   # For more info: https://docs.evidence.dev/plugins/using-plugins/
+datasources:
+  @evidence-dev/faker-datasource: { }
+  @evidence-dev/bigquery: { }
+  @evidence-dev/csv: { }
+  @evidence-dev/duckdb: { }
+  @evidence-dev/mssql: { }
+  @evidence-dev/mysql: { }
+  @evidence-dev/postgres: { }
+  @evidence-dev/snowflake: { }
+  @evidence-dev/sqlite: { }
